--- a/backend/main_project/requirements.txt
+++ b/backend/main_project/requirements.txt
@@ -1,7 +1,14 @@
 asgiref==3.8.1
+distlib==0.3.9
 Django==5.1.4
 django-cors-headers==4.6.0
+django-json-widget==2.0.1
 djangorestframework==3.15.2
+filelock==3.16.1
+gunicorn==23.0.0
 mysqlclient==2.2.6
+packaging==24.2
+platformdirs==4.3.6
 sqlparse==0.5.3
 tzdata==2024.2
+virtualenv==20.29.1
