--- a/backend/main_project/requirements.txt
+++ b/backend/main_project/requirements.txt
@@ -9,7 +9,9 @@ gunicorn==23.0.0
 mysqlclient==2.2.6
 packaging==24.2
 platformdirs==4.3.6
+psycopg2==2.9.10
 psycopg2-binary==2.9.10
+python-decouple==3.8
 sqlparse==0.5.3
 tzdata==2024.2
 virtualenv==20.29.1
