--- a/backend/main_project/requirements.txt
+++ b/backend/main_project/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 distlib==0.3.9
-Django==5.1.4
+dj-database-url==2.3.0
+Django==5.1.5
 django-cors-headers==4.6.0
 django-json-widget==2.0.1
 djangorestframework==3.15.2
@@ -13,5 +14,6 @@ psycopg2==2.9.10
 psycopg2-binary==2.9.10
 python-decouple==3.8
 sqlparse==0.5.3
+typing_extensions==4.12.2
 tzdata==2024.2
 virtualenv==20.29.1
