--- a/backend/main_project/requirements.txt
+++ b/backend/main_project/requirements.txt
@@ -3,6 +3,7 @@ distlib==0.3.9
 dj-database-url==2.3.0
 Django==5.1.5
 django-cors-headers==4.6.0
+django-environ==0.12.0
 django-json-widget==2.0.1
 djangorestframework==3.15.2
 filelock==3.16.1
