all updated code

--- a/backend/main_project/.env
+++ b/backend/main_project/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:6ra4HelvUMxkse4fhGuE9xp4oEDo4ivv@localhost:5432/tenfunding
+DATABASE_URL=postgresql://postgres:UnMyBf28r3GK8nEmHiZQvXlXHtmQgy0p@localhost:5432/ten_funding
