--- a/backend/main_project/requirements.txt
+++ b/backend/main_project/requirements.txt
@@ -17,6 +17,7 @@ platformdirs==4.3.6
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
 python-decouple==3.8
+python-dotenv==1.0.1
 sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2024.2
